--- a/couphone/app/build.gradle
+++ b/couphone/app/build.gradle
@@ -33,6 +33,10 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
