--- a/couphone/app/src/main/AndroidManifest.xml
+++ b/couphone/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.couphone">
 
     <application
         android:allowBackup="true"
@@ -9,10 +10,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.YoutubeLayout"
+        android:theme="@style/Theme.Couphone1"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name="com.kuit.couphone.LoginActivity"
             android:exported="true"
             android:label="@string/app_name" >
             <intent-filter>
@@ -22,13 +23,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.kuit.couphone.MainActivity"
             android:exported="true"/>
         <activity
-            android:name=".PasswordResetActivity"
+            android:name="com.kuit.couphone.PasswordResetActivity"
             android:exported="true"/>
         <activity
-            android:name=".RegisterActivity"
+            android:name="com.kuit.couphone.RegisterActivity"
             android:exported="true"/>
     </application>
 
