--- a/couphone/app/src/main/AndroidManifest.xml
+++ b/couphone/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.couphone">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -13,7 +12,7 @@
         android:theme="@style/Theme.Couphone1"
         tools:targetApi="31">
         <activity
-            android:name="com.kuit.couphone.LoginActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:label="@string/app_name" >
             <intent-filter>
@@ -23,13 +22,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.kuit.couphone.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"/>
         <activity
-            android:name="com.kuit.couphone.PasswordResetActivity"
+            android:name=".PasswordResetActivity"
             android:exported="true"/>
         <activity
-            android:name="com.kuit.couphone.RegisterActivity"
+            android:name=".RegisterActivity"
+            android:exported="true"/>
+        <activity
+            android:name=".SettingsActivity"
             android:exported="true"/>
     </application>
 
