--- a/couphone/app/src/main/AndroidManifest.xml
+++ b/couphone/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.Couphone1"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".SplashActivity"
             android:exported="true"
             android:label="@string/app_name" >
             <intent-filter>
@@ -21,6 +21,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"/>
@@ -31,8 +34,9 @@
             android:name=".RegisterActivity"
             android:exported="true"/>
         <activity
-            android:name=".SettingsActivity"
+            android:name=".SettingFragment"
             android:exported="true"/>
+
     </application>
 
 </manifest>
