--- a/couphone/app/build.gradle
+++ b/couphone/app/build.gradle
@@ -40,7 +40,12 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+    implementation 'com.google.android.gms:play-services-location:19.0.0'
+    implementation files('libs/libDaumMapAndroid.jar')
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
