--- a/couphone/app/src/main/AndroidManifest.xml
+++ b/couphone/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,7 +14,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Couphone1"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <meta-data android:name="com.kakao.sdk.AppKey" android:value="4d8bc2574df1b7f508727581b2d59c7e" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
