--- a/couphone/app/build.gradle
+++ b/couphone/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation "com.kakao.sdk:v2-all:2.15.0" // 전체 모듈 설치, 2.11.0 버전부터 지원
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.4'
+    implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.0'
     implementation 'com.google.android.gms:play-services-location:19.0.0'
     implementation files('libs/libDaumMapAndroid.jar')
