--- a/couphone/app/src/main/AndroidManifest.xml
+++ b/couphone/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:name=".RegisterActivity"
             android:exported="true"/>
         <activity
-            android:name=".SettingFragment"
+            android:name=".InformationActivity"
             android:exported="true"/>
 
     </application>
