--- a/couphone/app/build.gradle
+++ b/couphone/app/build.gradle
@@ -43,6 +43,7 @@ android {
 
 dependencies {
     def room_version = "2.5.0"
+    implementation 'com.github.bumptech.glide:glide:4.12.0' // 이미지로딩 라이브러리
     implementation(platform("com.google.firebase:firebase-bom:32.2.2"))
     implementation("com.google.firebase:firebase-auth-ktx")
     implementation("com.google.firebase:firebase-analytics-ktx")
